--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "yazl": "^2.4.2"
   },
   "devDependencies": {
+    "dir-compare": "^1.3.0",
     "egg-bin": "^1.9.1",
     "eslint": "^3.10.2",
     "eslint-config-egg": "^3.2.0",
+    "mkdirp": "^0.5.1",
     "mm": "^2.0.0",
     "power-assert": "^1.4.2",
     "uuid": "^3.0.1"
