--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   },
   "homepage": "https://github.com/node-modules/compressing#readme",
   "dependencies": {
+    "flushwritable": "^1.0.0",
     "get-ready": "^1.0.0",
+    "mkdirp": "^0.5.1",
     "multipipe": "^1.0.2",
     "streamifier": "^0.1.1",
     "tar-stream": "^1.5.2",
@@ -42,6 +44,7 @@
     "yazl": "^2.4.2"
   },
   "devDependencies": {
+    "dir-compare": "^1.3.0",
     "egg-bin": "^1.9.1",
     "eslint": "^3.10.2",
     "eslint-config-egg": "^3.2.0",
