--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: node_js
 node_js:
   - '4'
   - '6'
-  - '7'
+  - '8'
 install:
-  - npm i npm && npm i
+  - npm i npminstall && npminstall
 script:
   - npm run ci
 after_script:
-  - npm i codecov && codecov
+  - npminstall codecov && codecov
