--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "egg-bin test",
     "cov": "egg-bin cov",
-    "lint": "eslint --fix .",
+    "lint": "eslint .",
     "ci": "npm run lint && npm run cov"
   },
   "repository": {
@@ -46,10 +46,14 @@
   "devDependencies": {
     "dir-compare": "^1.3.0",
     "egg-bin": "^1.9.1",
+    "egg-ci": "^1.8.0",
     "eslint": "^3.10.2",
     "eslint-config-egg": "^3.2.0",
     "mm": "^2.0.0",
     "power-assert": "^1.4.2",
     "uuid": "^3.0.1"
+  },
+  "ci": {
+    "version": "4, 6, 8"
   }
 }
