--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^3.10.2",
     "eslint-config-egg": "^3.2.0",
     "mm": "^2.0.0",
+    "mz-modules": "^2.1.0",
     "power-assert": "^1.4.2",
     "rimraf": "^2.6.2",
     "uuid": "^3.0.1"
