--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Everything you need for compressing and uncompressing",
   "main": "index.js",
   "scripts": {
-    "test": "egg-bin test",
+    "test": "egg-bin test && tsc test/fixtures/types/*.ts",
     "cov": "egg-bin cov",
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov"
@@ -23,8 +23,10 @@
     "zip",
     "stream"
   ],
+  "typings": "index.d.ts",
   "files": [
     "index.js",
+    "index.d.ts",
     "lib"
   ],
   "author": "shaoshuai0102 <shaoshuai0102@gmail.com>",
@@ -44,6 +46,8 @@
     "yazl": "^2.4.2"
   },
   "devDependencies": {
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.12.9",
     "dir-compare": "^1.3.0",
     "egg-bin": "^1.9.1",
     "egg-ci": "^1.8.0",
@@ -53,6 +57,7 @@
     "mz-modules": "^2.1.0",
     "power-assert": "^1.4.2",
     "rimraf": "^2.6.2",
+    "typescript": "^3.1.6",
     "uuid": "^3.0.1"
   },
   "engines": {
