--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Everything you need for compressing and uncompressing",
   "main": "index.js",
   "scripts": {
-    "test": "egg-bin test && tsc test/fixtures/types/*.ts",
+    "test": "egg-bin test && tsc -p ./test/fixtures/types/tsconfig.json",
     "cov": "egg-bin cov",
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov"
