--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Everything you need for compressing and uncompressing",
   "main": "index.js",
   "scripts": {
-    "ts-test": "tsc -p ./test/fixtures/types/tsconfig.json",
-    "test": "egg-bin test && npm run ts-test",
+    "test": "egg-bin test",
     "cov": "egg-bin cov",
     "lint": "eslint .",
-    "ci": "npm run lint && npm run ts-test && npm run cov"
+    "ci": "npm run lint && npm run cov"
   },
   "repository": {
     "type": "git",
@@ -48,17 +47,18 @@
   },
   "devDependencies": {
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.9",
+    "@types/node": "^10.14.10",
+    "coffee": "^5.2.1",
     "dir-compare": "^1.3.0",
     "egg-bin": "^1.9.1",
     "egg-ci": "^1.8.0",
     "eslint": "^3.10.2",
-    "eslint-config-egg": "^3.2.0",
+    "eslint-config-egg": "^7.0.0",
     "mm": "^2.0.0",
     "mz-modules": "^2.1.0",
     "power-assert": "^1.4.2",
     "rimraf": "^2.6.2",
-    "typescript": "^3.1.6",
+    "typescript": "^3.5.2",
     "uuid": "^3.0.1"
   },
   "engines": {
