--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ coverage
 .vscode
 test/fixtures/types/*.js
 test/fixtures/chinese-path-test.zip
-yarn.lock
 .DS_Store
+yarn.lock
+!test/fixtures/symlink/node_modules
