--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ node_js:
   - '8'
   - '10'
   - '11'
+before_install:
+  - npm i npminstall -g
 install:
-  - npm i npminstall && npminstall
+  - npminstall
 script:
   - npm run ci
 after_script:
