--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "flushwritable": "^1.0.0",
     "get-ready": "^1.0.0",
+    "iconv-lite": "^0.5.0",
     "mkdirp": "^0.5.1",
     "pump": "^3.0.0",
     "streamifier": "^0.1.1",
