--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "node": ">= 4.0.0"
   },
   "ci": {
-    "version": "4, 6, 8, 10, 11",
+    "version": "4, 6, 8, 10, 12, 13",
     "license": {
       "year": "2017",
       "fullname": "node-modules and other contributors"
