--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ node_js:
   - '6'
   - '8'
   - '10'
-  - '11'
+  - '12'
+before_install:
+  - npm i npminstall -g
 install:
-  - npm i npminstall && npminstall
+  - npminstall
 script:
   - npm run ci
 after_script:
