--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/node": "^10.12.9",
     "dir-compare": "^1.3.0",
     "egg-bin": "^1.9.1",
-    "egg-ci": "^1.8.0",
+    "egg-ci": "^2.1.0",
     "eslint": "^3.10.2",
     "eslint-config-egg": "^3.2.0",
     "git-contributor": "^1.1.0",
@@ -68,7 +68,7 @@
     "node": ">= 4.0.0"
   },
   "ci": {
-    "version": "4, 6, 8, 10, 12",
+    "version": "8, 10, 12, 14, 16, 18",
     "license": {
       "year": "2017",
       "fullname": "node-modules and other contributors"
