--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "egg-bin": "4",
     "eslint": "^3.10.2",
     "eslint-config-egg": "^3.2.0",
-    "git-contributor": "^1.1.0",
+    "git-contributor": "2",
     "mm": "^2.0.0",
     "mz-modules": "^2.1.0",
     "rimraf": "^2.6.2",
