--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@types/node": "^10.12.9",
     "dir-compare": "^1.3.0",
     "egg-bin": "4",
-    "eslint": "^3.10.2",
-    "eslint-config-egg": "^3.2.0",
+    "eslint": "8",
+    "eslint-config-egg": "12",
     "git-contributor": "2",
     "mm": "^2.0.0",
     "mz-modules": "^2.1.0",
