--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   Job:
     name: Node.js
-    uses: artusjs/github-actions/.github/workflows/node-test.yml@v1
+    uses: node-modules/github-actions/.github/workflows/node-test.yml@master
     with:
-      os: 'ubuntu-latest, macos-latest'
-      version: '10, 12, 14, 16, 18, 19'
+      os: 'ubuntu-latest, macos-latest, windows-latest'
+      version: '14, 16, 18, 20'
