feat: support xz
closes https://github.com/node-modules/compressing/issues/96

All codes gen by cursor

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "flushwritable": "^1.0.0",
     "get-ready": "^1.0.0",
     "iconv-lite": "^0.5.0",
+    "lzma-native": "^8.0.5",
     "mkdirp": "^0.5.1",
     "pump": "^3.0.0",
     "streamifier": "^0.1.1",
