--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,3 +16,5 @@ jobs:
     with:
       os: 'ubuntu-latest, macos-latest, windows-latest'
       version: '18, 20, 22, 24'
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
