--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches: [ master ]
 
+  merge_group:
+
 jobs:
   Job:
     name: Node.js
@@ -14,3 +16,5 @@ jobs:
     with:
       os: 'ubuntu-latest, macos-latest, windows-latest'
       version: '18, 20, 22, 24'
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
