feat: add XZ compression and decompression support
- Add XZ compression module with FileStream and UncompressStream classes
- Implement compressFile() and uncompress() functions
- Add TypeScript definitions for XZ module
- Add comprehensive unit tests for all XZ functionality
- Support compression levels 1-9 and multi-threading options
- Fixes #96

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "flushwritable": "^1.0.0",
     "get-ready": "^1.0.0",
     "iconv-lite": "^0.5.0",
+    "lzma-native": "^8.0.6",
     "streamifier": "^0.1.1",
     "tar-stream": "^1.5.2",
     "yazl": "^2.4.2"
